kubernetes/apps/banking/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banking
  labels:
    istio-injection: enabled
    team: banking
    environment: lab
