kubernetes/apps/banking/acquirer-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acquirer-service
  namespace: banking
  labels: {app: acquirer-service, team: banking, environment: lab}
spec:
  replicas: 2
  revisionHistoryLimit: 3
  minReadySeconds: 10
  progressDeadlineSeconds: 600
  selector:
    matchLabels: {app: acquirer-service}
  strategy:
    type: RollingUpdate
    rollingUpdate: {maxUnavailable: 0, maxSurge: 1}
  template:
    metadata:
      labels: {app: acquirer-service, team: banking, environment: lab}
    spec:
      serviceAccountName: acquirer-service
      terminationGracePeriodSeconds: 30
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels: {app: acquirer-service}
      imagePullSecrets: [{name: ghcr-secret}]
      securityContext:
        seccompProfile: {type: RuntimeDefault}
      containers:
        - name: acquirer-service
          image: ghcr.io/gefmoura0601-bot/acquirer-service-dotnet:20e1223
          imagePullPolicy: IfNotPresent
          ports: [{name: http, containerPort: 8080}]
          startupProbe:
            httpGet: {path: /health/live, port: http}
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet: {path: /health/live, port: http}
            periodSeconds: 15
          readinessProbe:
            httpGet: {path: /health/ready, port: http}
            periodSeconds: 10
          resources:
            requests: {cpu: 50m, memory: 96Mi}
            limits: {cpu: 400m, memory: 256Mi}
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1654
            runAsGroup: 1654
            capabilities: {drop: [ALL]}
---
apiVersion: v1
kind: Service
metadata:
  name: acquirer-service
  namespace: banking
  labels: {app: acquirer-service, team: banking, environment: lab}
spec:
  selector: {app: acquirer-service}
  ports:
    - {name: http, port: 80, targetPort: http}
