kubernetes/apps/banking/store-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-service
  namespace: banking
  labels: {app: store-service, team: banking, environment: lab}
spec:
  replicas: 2
  revisionHistoryLimit: 3
  minReadySeconds: 10
  progressDeadlineSeconds: 600
  selector:
    matchLabels: {app: store-service}
  strategy:
    type: RollingUpdate
    rollingUpdate: {maxUnavailable: 0, maxSurge: 1}
  template:
    metadata:
      labels: {app: store-service, team: banking, environment: lab}
    spec:
      serviceAccountName: store-service
      terminationGracePeriodSeconds: 30
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels: {app: store-service}
      imagePullSecrets: [{name: ghcr-secret}]
      securityContext:
        seccompProfile: {type: RuntimeDefault}
      containers:
        - name: store-service
          image: ghcr.io/gefmoura0601-bot/store-service-go:20e1223
          imagePullPolicy: IfNotPresent
          ports: [{name: http, containerPort: 8080}]
          startupProbe:
            httpGet: {path: /healthz, port: http}
            failureThreshold: 20
            periodSeconds: 3
          livenessProbe:
            httpGet: {path: /healthz, port: http}
            periodSeconds: 15
          readinessProbe:
            httpGet: {path: /healthz, port: http}
            periodSeconds: 10
          resources:
            requests: {cpu: 20m, memory: 32Mi}
            limits: {cpu: 200m, memory: 128Mi}
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
            readOnlyRootFilesystem: true
            capabilities: {drop: [ALL]}
---
apiVersion: v1
kind: Service
metadata:
  name: store-service
  namespace: banking
  labels: {app: store-service, team: banking, environment: lab}
spec:
  selector: {app: store-service}
  ports:
    - {name: http, port: 80, targetPort: http}
